--- a/tcstatus/manifest.json
+++ b/tcstatus/manifest.json
@@ -15,7 +15,8 @@
 		"notifications"
 	],
 	"browser_action":{
-		"default_icon":"images/icon32.png"
+		"default_icon":"images/icon32.png",
+		"default_popup":"views/status.html"
 	},
 	"options_page":"views/options.html"
 }
